--- a/glade/chronojump.glade
+++ b/glade/chronojump.glade
@@ -1459,6 +1459,7 @@ comments</property>
     <property name="resizable">False</property>
     <property name="modal">True</property>
     <property name="type_hint">dialog</property>
+    <signal name="delete_event" handler="on_preferences_delete_event"/>
     <child>
       <widget class="GtkVBox" id="vbox10">
         <property name="visible">True</property>
