--- a/glade/chronojump.glade
+++ b/glade/chronojump.glade
@@ -192,8 +192,9 @@ comments</property>
               <widget class="GtkSpinButton" id="spinbutton_height">
                 <property name="visible">True</property>
                 <property name="can_focus">True</property>
-                <property name="adjustment">0 0 250 1 10 10</property>
+                <property name="adjustment">0 0 250 0.10000000000000001 10 10</property>
                 <property name="climb_rate">1</property>
+                <property name="digits">1</property>
                 <property name="numeric">True</property>
               </widget>
               <packing>
@@ -208,8 +209,9 @@ comments</property>
               <widget class="GtkSpinButton" id="spinbutton_weight">
                 <property name="visible">True</property>
                 <property name="can_focus">True</property>
-                <property name="adjustment">0 0 300 1 10 10</property>
+                <property name="adjustment">0 0 300 0.10000000000000001 10 10</property>
                 <property name="climb_rate">1</property>
+                <property name="digits">1</property>
                 <property name="numeric">True</property>
                 <signal name="value_changed" handler="on_entries_required_changed"/>
                 <signal name="activate" handler="on_entries_required_changed"/>
