--- a/glade/chronojump.glade
+++ b/glade/chronojump.glade
@@ -18,8 +18,8 @@
         <child>
           <widget class="GtkLabel" id="label76">
             <property name="visible">True</property>
-            <property name="label" translatable="yes">Please fill these values
-(bold titles are required)</property>
+            <property name="label" translatable="yes">Please fill these values. &lt;b&gt;Bold&lt;/b&gt; titles are required.</property>
+            <property name="use_markup">True</property>
           </widget>
           <packing>
             <property name="expand">False</property>
@@ -46,8 +46,8 @@
                         <property name="visible">True</property>
                         <property name="n_rows">6</property>
                         <property name="n_columns">3</property>
-                        <property name="column_spacing">8</property>
-                        <property name="row_spacing">6</property>
+                        <property name="column_spacing">6</property>
+                        <property name="row_spacing">4</property>
                         <child>
                           <widget class="GtkLabel" id="label19">
                             <property name="visible">True</property>
@@ -355,8 +355,8 @@
                         <property name="visible">True</property>
                         <property name="n_rows">6</property>
                         <property name="n_columns">3</property>
-                        <property name="column_spacing">8</property>
-                        <property name="row_spacing">6</property>
+                        <property name="column_spacing">6</property>
+                        <property name="row_spacing">4</property>
                         <child>
                           <widget class="GtkLabel" id="label47">
                             <property name="visible">True</property>
@@ -566,12 +566,6 @@
                           </packing>
                         </child>
                         <child>
-                          <placeholder/>
-                        </child>
-                        <child>
-                          <placeholder/>
-                        </child>
-                        <child>
                           <widget class="GtkLabel" id="label3">
                             <property name="visible">True</property>
                             <property name="xalign">0</property>
@@ -633,6 +627,12 @@
                             <property name="x_options">GTK_FILL</property>
                             <property name="y_options">GTK_FILL</property>
                           </packing>
+                        </child>
+                        <child>
+                          <placeholder/>
+                        </child>
+                        <child>
+                          <placeholder/>
                         </child>
                       </widget>
                     </child>
